# Zod2d-Engine

./: .gitignore  CMakeLists.txt  Makefile  game
shaders/: fragment.frag  vertex.vert
src/: common.h  defines.h  engine.cpp  engine.h  main.cpp  math.hpp  utils.hpp
src/api/: gl_backend.cpp  gl_backend.h  gl_renderer.cpp  gl_renderer.h
src/backend/: backend.cpp  backend.h
src/core/: asset_manager.cpp  asset_manager.h
src/game/: game.cpp  game.h  player.cpp  player.h
src/input/: input.cpp  input.h  keycodes.h
src/types/: shader.cpp  shader.h  types.hpp
tests/: hello_test.cpp  math_test.cpp
